updated bio line

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <header class="clearfix">
                 <h1 class="title">Nathan Griffiths</h1>
                 <h3 class="subhead">
-                    <span>Virtual reality/interactive design, development and production. NYC.</span>
+                    <span>Virtual reality/interactive design, development and production. Previously <a href="https://twitter.com/AP">@AP</a> and <a href="https://twitter.com/nytimes">@nytimes</a>.</span>
                     <nav class="contact-nav">
                         <ul>
                             <li>
