--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <section class="project" data-category="multimedia--vr">
                     <div class="header">
                         <h2>
-                            <span>Daily 360</span>
+                            <span>The Daily 360</span>
                             <!-- <span class="social">
                                     <a href="" target="_blank">t.</a>
                                     <a href="" target="_blank">f.</a>
