--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </span> -->
                         </h2>
                     </div>
-                    <a href="http://hosted.ap.org/interactives/2016/nimrud-destroyed/" target="_blank">
+                    <a href="https://interactives.ap.org/2016/nimrud-destroyed/" target="_blank">
                         <img class="grayscale" src="images/placeholder.png" data-src="images/nimrud-riches.jpg" data-retina="" data-websrc="images/nimrud-riches.jpg" alt="image" />
                     </a>
                     <p class="description">WebVR-based exploration of the Islamic State’s destruction of the archaeological site of Nimrud in Iraq.</p>
