--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/slave-fishermen.jpg" data-retina="" data-websrc="images/slave-fishermen.jpg" alt="image" />
                     </a>
-                    <p class="description">Stories of men freed from conditions of modern day slavery following a Pultizer winning investigation by the AP into the Thai fishing industry.</p>
+                    <p class="description">Stories of men freed from conditions of modern day slavery following a Pulitzer winning investigation by the AP into the Thai fishing industry.</p>
 
                     <div class="embed" data-title="modern-slavery"></div>
                 </section>
