--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,10 +10,12 @@
         <meta name="description" content="Nathan Griffiths njgriffiths portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- STYLES -->
         <link rel="stylesheet" href="css/main.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <!-- JS -->
+        <script src="js/bundle.js"></script>
     </head>
 
     <body>
@@ -438,9 +440,6 @@
             <article id="about">
             </article>
         </div>
-
-        <!-- requirejs -->
-        <script data-main="js/main" src="js/vendor/require-2.1.15.min.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
