added suite life

--- a/index.html
+++ b/index.html
@@ -199,6 +199,24 @@
                     <div class="embed" data-title="calais-migrant-camps"></div>
                 </section>
 
+                <section class="project" data-category="multimedia--vr">
+                    <div class="header">
+                        <h2>
+                            <span>The Suite Life</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://interactives.ap.org/2015/suite-life/" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/suite-life.jpg" data-retina="" data-websrc="images/suite-life.jpg" alt="Suite Life cover image" />
+                    </a>
+                    <p class="description">VR and 3D tours of accomodations and suites that highlight the luxury accommodations available to the super-rich. Also available for <a href="https://www.oculus.com/experiences/gear-vr/1018434324864237/" target="_blank">Gear VR.</a></p>
+
+                    <div class="embed" data-title="suite-life"></div>
+                </section>
+
                 <section class="project" data-category="dataviz">
                     <div class="header">
                         <h2>
