--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- JS -->
-        <script src="js/bundle.js"></script>
+        <script src="js/app-bundle.js"></script>
     </head>
 
     <body>
