--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		
-
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
   		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +9,8 @@
   		<!-- <link rel="manifest" href="site.webmanifest"> -->
   		<link rel="apple-touch-icon" href="icon.png">
   		<!-- Place favicon.ico in the root directory -->
+
+        <!-- FONT AWESOME -->
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
   		<meta name="theme-color" content="#fafafa">
