updated with toxic drug death tracker

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,18 @@
 
             	    <div class="embed" data-title="covid-20k"></div>
             	</section>
+                
+                <section class="project" data-category="dataviz--writing">
+            	    <div class="header">
+            	        <h2>Toxic drug deaths</h2>
+            	    </div>
+            	    <a href="https://vancouversun.com/news/local-news/tracking-overdose-deaths-in-british-columbia" target="_blank">
+            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/toxic-drug-deaths.jpg" data-retina="" data-websrc="./images/toxic-drug-deaths.jpg" alt="image" />
+            	    </a>
+            	    <p class="description">Dashboard tracks drug poisoning deaths in B.C.</p>
+
+            	    <div class="embed" data-title="covid-20k"></div>
+            	</section>
 
                 <section class="project" data-category="dataviz--writing">
             	    <div class="header">
@@ -359,22 +371,6 @@
                     <p class="description">Multimedia narrative explores the role of soccer for children growing up the in the slums of Honduras. 2014 SND Award of Excellence for use of multimedia.</p>
 
                     <div class="embed" data-title="honduras-soccer"></div>
-                </section>
-
-                <section class="project" data-category="multimedia--photo-essay">
-                    <div class="header">
-                        <h2>Focus: North Korea</span>
-                            <!-- <span class="social">
-                                <a href="" target="_blank">t.</a>
-                                <a href="" target="_blank">f.</a>
-                            </span> -->
-                        </h2>
-                    </div>
-                    <a href="http://interactives.ap.org/2013/focus-north-korea" target="_blank">
-                        <!-- <div class="background-image" data-src="./images/paektu.jpg"></div> -->
-                        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/focus-dprk.jpg" data-retina="" data-websrc="./images/focus-dprk-web.jpg" alt="image" />
-                    </a>
-                    <p class="description">AP journalists in Pyongyang used Instagram to highlight rarely seen views of the reclusive country. Winner of the 2013 ONA award for topical reporting.</p>
                 </section>
 
                 <section class="project" data-category="multimedia--dataviz">
