updated bio line

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <header class="clearfix">
                 <h1 class="title">Nathan Griffiths</h1>
                 <h3 class="subhead">
-                    <p>Visual and data journalist. Currently <a href="https://twitter.com/VancouverSun">@vancouversun</a>. Previously <a href="https://twitter.com/AP">@AP</a> and <a href="https://twitter.com/nytimes">@nytimes</a>.</p>
+                    <p>Award-winning visual and data journalist. Currently <a href="https://twitter.com/VancouverSun">@vancouversun</a>. Previously <a href="https://twitter.com/AP">@AP</a> and <a href="https://twitter.com/nytimes">@nytimes</a>.</p>
                     <nav class="contact-nav">
                         <ul>
                             <li>
@@ -113,7 +113,7 @@
             	    <a href="https://vancouversun.com/news/politics/bc-election/b-c-election-2020-liberal-party-leads-in-facebook-spending-since-the-election-was-called" target="_blank">
             	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/bc-election.jpg" data-retina="" data-websrc="./images/bc-election.jpg" alt="image" />
             	    </a>
-            	    <p class="description">Analysis of political campaign ads run on Facebook during the 2020 provincial election in B.C.</p>
+            	    <p class="description">Analysis of political campaign ads run on Facebook during B.C.’s 2020 provincial elections.</p>
 
             	    <div class="embed" data-title="bc-election"></div>
             	</section>
