--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,18 @@
             	    <div class="embed" data-title="print-graphics"></div>
             	</section>
 
+                <section class="project" data-category="dataviz">
+            	    <div class="header">
+            	        <h2>B.C. wildfire map</h2>
+            	    </div>
+            	    <a href="https://vancouversun.com/news/local-news/bc-wildfire-map-2023-updates-fire-locations-evacuation-alerts-orders" target="_blank">
+            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/wildfire-map.jpg" data-retina="" data-websrc="./images/urban-forest.jpg" alt="image" />
+            	    </a>
+            	    <p class="description">Web app tracks wildfires, PM2.5 levels and evaculation orders in B.C.</p>
+
+            	    <div class="embed" data-title="covid-20k"></div>
+            	</section>
+
                 <section class="project" data-category="dataviz--writing">
             	    <div class="header">
             	        <h2>Urban forest loss</h2>
@@ -70,6 +82,7 @@
 
             	    <div class="embed" data-title="covid-20k"></div>
             	</section>
+
                 <section class="project" data-category="dataviz--writing">
             	    <div class="header">
             	        <h2>Metro’s heat islands</h2>
