commented out wildfire map for now b/c thumbnail isn't working

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
             	    <div class="embed" data-title="print-graphics"></div>
             	</section>
 
-                <section class="project" data-category="dataviz">
+                <!-- <section class="project" data-category="dataviz">
             	    <div class="header">
             	        <h2>B.C. wildfire map</h2>
             	    </div>
@@ -69,7 +69,7 @@
             	    <p class="description">Web app tracks wildfires, PM2.5 levels and evaculation orders in B.C.</p>
 
             	    <div class="embed" data-title="covid-20k"></div>
-            	</section>
+            	</section> -->
 
                 <section class="project" data-category="dataviz--writing">
             	    <div class="header">
