added iio charges & AP note

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                 <h1 class="title">Nathan Griffiths</h1>
                 <h3 class="subhead">
                     <p>Award-winning visual and data journalist. Currently <a href="https://twitter.com/VancouverSun">@vancouversun</a>. Previously <a href="https://twitter.com/AP">@AP</a> and <a href="https://twitter.com/nytimes">@nytimes</a>.</p>
+                    <p class="note">NOTE: Some AP projects are currently unavailable due to server-side issues.</p>
                     <nav class="contact-nav">
                         <ul>
                             <li>
@@ -59,17 +60,30 @@
             	    <div class="embed" data-title="print-graphics"></div>
             	</section>
 
-                <!-- <section class="project" data-category="dataviz">
+
+                <section class="project" data-category="dataviz">
+            	    <div class="header">
+            	        <h2>IIO charges</h2>
+            	    </div>
+            	    <a href="https://vancouversun.com/news/local-news/bc-police-charges-long-wait-grieving-families" target="_blank">
+            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/iio-charges.jpg" data-retina="" data-websrc="./images/iio-charges.jpg" alt="image" />
+            	    </a>
+            	    <p class="description">Investigation highlights limits of B.C.’s efforts to address police accused of crime.</p>
+
+            	    <div class="embed" data-title="covid-20k"></div>
+            	</section>
+
+                <section class="project" data-category="dataviz">
             	    <div class="header">
             	        <h2>B.C. wildfire map</h2>
             	    </div>
             	    <a href="https://vancouversun.com/news/local-news/bc-wildfire-map-2023-updates-fire-locations-evacuation-alerts-orders" target="_blank">
-            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/wildfire-map.jpg" data-retina="" data-websrc="./images/urban-forest.jpg" alt="image" />
+            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/wildfire-map.jpg" data-retina="" data-websrc="./images/wildfire-map.jpg" alt="image" />
             	    </a>
             	    <p class="description">Web app tracks wildfires, PM2.5 levels and evaculation orders in B.C.</p>
 
             	    <div class="embed" data-title="covid-20k"></div>
-            	</section> -->
+            	</section>
 
                 <section class="project" data-category="dataviz--writing">
             	    <div class="header">
