updated project list

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,29 @@
             	    <div class="embed" data-title="print-graphics"></div>
             	</section>
 
+                <section class="project" data-category="dataviz">
+            	    <div class="header">
+            	        <h2>Non-binary teens</h2>
+            	    </div>
+            	    <a href="https://vancouversun.com/health/local-health/bc-youth-survey-nonbinary-teens-results" target="_blank">
+            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/nonbinary-comic.jpg" data-retina="" data-websrc="./images/nonbinary-comic.jpg" alt="image" />
+            	    </a>
+            	    <p class="description">Data comic explores the results for non-binary youth from B.C.’s teen health survey.</p>
+
+            	    <div class="embed" data-title="covid-20k"></div>
+            	</section>
+
+                <section class="project" data-category="dataviz">
+            	    <div class="header">
+            	        <h2>Low-income seniors</h2>
+            	    </div>
+            	    <a href="https://vancouversun.com/news/local-news/bc-rent-subsidy-program-seniors-flawed-advocates" target="_blank">
+            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/seniors-rent.jpg" data-retina="" data-websrc="./images/seniors-rent.jpg" alt="image" />
+            	    </a>
+            	    <p class="description">Investigation into inadequate rent support for low-income seniors.</p>
+
+            	    <div class="embed" data-title="covid-20k"></div>
+            	</section>
 
                 <section class="project" data-category="dataviz">
             	    <div class="header">
@@ -68,7 +91,7 @@
             	    <a href="https://vancouversun.com/news/local-news/bc-police-charges-long-wait-grieving-families" target="_blank">
             	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/iio-charges.jpg" data-retina="" data-websrc="./images/iio-charges.jpg" alt="image" />
             	    </a>
-            	    <p class="description">Investigation highlights limits of B.C.’s efforts to address police accused of crime.</p>
+            	    <p class="description">Investigation highlights limits of efforts to address police accused of crime.</p>
 
             	    <div class="embed" data-title="covid-20k"></div>
             	</section>
@@ -328,18 +351,17 @@
                     <div class="embed" data-title="transgender-youth"></div>
                 </section>
 
-                 <section class="project" data-category="multimedia--photo-essay--video">
+                 <!-- <section class="project" data-category="multimedia--photo-essay--video">
                     <div class="header">
                         <h2>Trading signals</h2>
                     </div>
                     <a href="http://interactives.ap.org/2015/trading-pit-signals" target="_blank">
-                        <!-- <div class="background-image" data-src="./images/paektu.jpg"></div> -->
                         <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/trading-signals.jpg" data-retina="" data-websrc="./images/trading-signals.jpg" alt="image" />
                     </a>
                     <p class="description">An introduction to the elaborate language of hand signals used by commodities traders ahead of the closure of most NY and Chicago futures pits.</p>
 
                     <div class="embed" data-title="trading-signals"></div>
-                </section>
+                </section> -->
 
                 <section class="project" data-category="multimedia--photo-essay">
                     <div class="header">
