updated portfolio entries

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <h1 class="title">Nathan Griffiths</h1>
                 <h3 class="subhead">
                     <p>Award-winning visual and data journalist. Currently <a href="https://twitter.com/VancouverSun">@vancouversun</a>. Previously <a href="https://twitter.com/AP">@AP</a> and <a href="https://twitter.com/nytimes">@nytimes</a>.</p>
-                    <p class="note">NOTE: Some AP projects are currently unavailable due to server-side issues.</p>
+                    <p class="note">NOTE: Some AP projects are unavailable due to intermittent AP server issues.</p>
                     <nav class="contact-nav">
                         <ul>
                             <li>
@@ -58,6 +58,18 @@
             	    <p class="description">A selection of print graphics published in the Vancouver Sun.</p>
 
             	    <div class="embed" data-title="print-graphics"></div>
+            	</section>
+
+                <section class="project" data-category="dataviz">
+            	    <div class="header">
+            	        <h2>Who's running in my riding?</h2>
+            	    </div>
+            	    <a href="https://vancouversun.com/news/local-news/bc-election-2024-who-running-riding" target="_blank">
+            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/candidate-lookup.jpg" data-retina="" data-websrc="./images/candidate-lookup.jpg" alt="image" />
+            	    </a>
+            	    <p class="description">Find your riding, candidates and previous results in B.C.’s election.</p>
+
+            	    <div class="embed" data-title="covid-20k"></div>
             	</section>
 
                 <section class="project" data-category="dataviz">
@@ -131,18 +143,6 @@
 
             	    <div class="embed" data-title="covid-20k"></div>
             	</section>
-            
-                <section class="project" data-category="dataviz--writing">
-            	    <div class="header">
-            	        <h2>Toxic drug deaths</h2>
-            	    </div>
-            	    <a href="https://vancouversun.com/news/local-news/tracking-overdose-deaths-in-british-columbia" target="_blank">
-            	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/toxic-drug-deaths.jpg" data-retina="" data-websrc="./images/toxic-drug-deaths.jpg" alt="image" />
-            	    </a>
-            	    <p class="description">Dashboard tracks drug poisoning deaths in B.C.</p>
-
-            	    <div class="embed" data-title="covid-20k"></div>
-            	</section>
                 
             	<section class="project" data-category="dataviz--writing">
             	    <div class="header">
@@ -192,6 +192,17 @@
 
             	    <div class="embed" data-title="taser-illo"></div>
             	</section>
+
+                <section class="project" data-category="multimedia">
+                    <div class="header">   
+                        <h2>Yucho Chow</span>
+                        </h2>
+                    </div>
+                    <a href="https://vancouversun.com/news/local-news/lost-photographs-of-yucho-chow-reveal-historical-diversity-of-vancouver" target="_blank">
+                        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/yucho.jpg" data-retina="" data-websrc="./images/medal-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">Multimedia feature on Vancouver’s first Chinese-Canadian photographer.</p>
+                </section>
 
             	<section class="project" data-category="dataviz--writing">
             	    <div class="header">
@@ -453,7 +464,7 @@
                     <p class="description">A series of portraits, interviews and charts explore the future and fears of an ageing global population.</p>
                 </section>
 
-                <section class="project" data-category="3d">
+                <!-- <section class="project" data-category="3d">
                     <div class="header">   
                         <h2>Olympic torch</span>
                             <!-- <span class="social">
@@ -467,7 +478,7 @@
                         <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/medal.jpg" data-retina="" data-websrc="./images/medal-web.jpg" alt="image" />
                     </a>
                     <p class="description">Model viewer for the 2014 Winter Olympics gold medal, torch and cauldron.</p>
-                </section>
+                </section> -->
 
                 <section class="project" data-category="dataviz">
                     <div class="header">
