--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
             	    <a href="https://vancouversun.com/news/local-news/bc-election-2024-who-running-riding" target="_blank">
             	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/candidate-lookup.jpg" data-retina="" data-websrc="./images/candidate-lookup.jpg" alt="image" />
             	    </a>
-            	    <p class="description">Find your riding, candidates and previous results in B.C.’s election.</p>
+            	    <p class="description">Find your riding, candidates and previous election results in B.C.</p>
 
             	    <div class="embed" data-title="covid-20k"></div>
             	</section>
