--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
             	    <a href="https://vancouversun.com/health/local-health/bc-youth-survey-nonbinary-teens-results" target="_blank">
             	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/nonbinary-comic.jpg" data-retina="" data-websrc="./images/nonbinary-comic.jpg" alt="image" />
             	    </a>
-            	    <p class="description">Data comic explores the results for non-binary youth from B.C.’s teen health survey.</p>
+            	    <p class="description">Data comic explores non-binary youth results from B.C.’s teen health survey.</p>
 
             	    <div class="embed" data-title="covid-20k"></div>
             	</section>
