--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,18 @@
 
                 <section class="project" data-category="dataviz">
             	    <div class="header">
+            	        <h2>B.C. Election 2024</h2>
+            	    </div>
+            	    <a href="https://vancouversun.com/news/https-vancouversun-com-news-bc-election-results-2024-riding-by-riding-map-of-the-vote" target="_blank">
+            	        <img class="grayscale lazy" src="./images/placeholder.jpg" data-src="./images/bc-elxn-2024.jpg" data-retina="" data-websrc="./images/bc-elxn-2024.png" alt="image" />
+            	    </a>
+            	    <p class="description">Live updating results from B.C.’s 2024 election.</p>
+
+            	    <div class="embed" data-title="covid-20k"></div>
+            	</section>
+
+                <section class="project" data-category="dataviz">
+            	    <div class="header">
             	        <h2>Who's running in my riding?</h2>
             	    </div>
             	    <a href="https://vancouversun.com/news/local-news/bc-election-2024-who-running-riding" target="_blank">
@@ -103,7 +115,7 @@
             	    <a href="https://vancouversun.com/news/local-news/bc-police-charges-long-wait-grieving-families" target="_blank">
             	        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/iio-charges.jpg" data-retina="" data-websrc="./images/iio-charges.jpg" alt="image" />
             	    </a>
-            	    <p class="description">Investigation highlights limits of efforts to address police accused of crime.</p>
+            	    <p class="description">Investigation into how rarely police accused of crimes face charges.</p>
 
             	    <div class="embed" data-title="covid-20k"></div>
             	</section>
@@ -201,7 +213,7 @@
                     <a href="https://vancouversun.com/news/local-news/lost-photographs-of-yucho-chow-reveal-historical-diversity-of-vancouver" target="_blank">
                         <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/yucho.jpg" data-retina="" data-websrc="./images/medal-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Multimedia feature on Vancouver’s first Chinese-Canadian photographer.</p>
+                    <p class="description">Multimedia feature on the go-to photographer for marginalized communities in early 20th century Vancouver.</p>
                 </section>
 
             	<section class="project" data-category="dataviz--writing">
@@ -348,18 +360,6 @@
                     <p class="description">VR and 3D tours of accomodations and suites that highlight the luxury accommodations available to the super-rich. Also available for <a href="https://www.oculus.com/experiences/gear-vr/1018434324864237/" target="_blank">Gear VR.</a> </p>
 
                     <div class="embed" data-title="suite-life"></div>
-                </section>
-
-                <section class="project" data-category="multimedia--photo-essay--audio">
-                    <div class="header">
-                        <h2>Transgender youth</h2>
-                    </div>
-                    <a href="http://interactives.ap.org/2015/transgender-youth" target="_blank">
-                        <img class="grayscale lazy" src="./images/placeholder.png" data-src="./images/transgender-youth.jpg" data-retina="" data-websrc="./images/transgender-youth.jpg" alt="image" />
-                    </a>
-                    <p class="description">Portraits of transgender youth in South Florida highlight their hardship and resilience.</p>
-
-                    <div class="embed" data-title="transgender-youth"></div>
                 </section>
 
                 <section class="project" data-category="multimedia--photo-essay">
